src/PlainCEETimer.Natives/Win32/Win32.h

NATIVES_EXPORT HWND NATIVESAPI PnAllocConsole(BOOL bRefresh, PHANDLE phStdIn, PHANDLE phStdOut, PHANDLE phStdErr);
NATIVES_EXPORT void NATIVESAPI PnKillProcessTree(DWORD dwProcessId);
NATIVES_EXPORT int NATIVESAPI PnLoadStringInternal(UINT uID, LPWSTR* ppBuffer);
NATIVES_EXPORT BOOL NATIVESAPI PnGetConsoleColor(HANDLE hConsoleHandle, COLORREF color, LPDWORD lpdwConsoleColor);
NATIVES_EXPORT BOOL NATIVESAPI PnSetConsoleMode(HANDLE hConsoleHandle, DWORD dwFlags);
NATIVES_EXPORT BOOL NATIVESAPI PnBuildAnsiColorString(LPWSTR lpBuffer, DWORD dwCchBuffer, LPDWORD lpData);
NATIVES_EXPORT COORD NATIVESAPI PnConsoleGetCursor(HANDLE hConsoleHandle);
NATIVES_EXPORT BOOL NATIVESAPI PnConsoleClear(HANDLE hConsoleHandle, COORD coFrom, COORD coTo);